packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/constructor_not_found.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "getConstructor" 14 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Constructor" 11 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org.ballerinalang.nativeimpl.jvm.tests.ClassWithPrivateConstructor"" 68 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "getConstructorWithDifferentArgsCount" 36 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(ident, "name" 4 0x00 ())
(, 1 0x00 ())
(int 3 0x00 ())
(ident, "age" 3 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Constructor" 11 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org.ballerinalang.nativeimpl.jvm.tests.ClassWithOneParamConstructor"" 69 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "getConstructorWithArgs" 22 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Constructor" 11 0x00 ())
({ 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""org.ballerinalang.nativeimpl.jvm.tests.ClassWithDefaultConstructor"" 68 0x00 ())
(, 1 0x00 ())
(ident, "paramTypes" 10 0x00 ())
(: 1 0x00 ())
([ 1 0x00 ())
(string, ""int"" 5 0x00 ())
(] 1 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
